# My-Breakout-Game

./: .gitignore  controls.txt  readme.txt
courses/PA199/project/: CMakeLists.txt  application.cpp  application.hpp  main.cpp  my_game.cpp
courses/PA199/project/data/shaders/: gui_shader.frag  gui_shader.vert  line_shader.frag  line_shader.vert  phong_shader.frag  phong_shader.vert  (+4 more)
courses/PA199/project/devlog/: controls.txt  devlog.md
courses/PA199/project/libraries/: CMakeLists.txt
courses/PA199/project/libraries/my_engine_math/: constants.cpp  constants.hpp  my_engine_math.hpp
courses/PA199/project/libraries/my_engine_math/matrix/: matrix.hpp  matrix_2.cpp  matrix_2.hpp  matrix_3.cpp  matrix_3.hpp  matrix_4.cpp  matrix_4.hpp  matrix_base.hpp
courses/PA199/project/libraries/my_engine_math/polar_coordinates/: polar_coordinates.cpp  polar_coordinates.hpp
courses/PA199/project/libraries/my_engine_math/rotation/: axis_angle.cpp  axis_angle.hpp  quaternion.cpp  quaternion.hpp  rotation.hpp
courses/PA199/project/libraries/my_engine_math/vector/: vector.hpp  vector_2.cpp  vector_2.hpp  vector_3.cpp  vector_3.hpp  vector_4.cpp  vector_4.hpp  vector_base.hpp
courses/PA199/project/my_engine/: my_engine.hpp
courses/PA199/project/my_game/: ball.cpp  ball.hpp  brick.cpp  brick.hpp  gui_lives.cpp  gui_lives.hpp  gui_score.cpp  gui_score.hpp  my_game.hpp  paddle.cpp  paddle.hpp  powerup.cpp  powerup.hpp
courses/PA199/project/test/: CMakeLists.txt  my_tests.cpp
framework/core/include/: iapplication.h  manager.h
framework/core/src/: manager.cpp
(+46 files in other folders)
