add_library(my_engine_math
    "./my_engine_math/my_engine_math.hpp"
    "./my_engine_math/constants.hpp"
    "./my_engine_math/vector/vector_base.hpp"
    "./my_engine_math/vector/vector_2.hpp"
    "./my_engine_math/vector/vector_3.hpp"
    "./my_engine_math/vector/vector_4.hpp"
    "./my_engine_math/matrix/matrix.hpp"
    "./my_engine_math/matrix/matrix_base.hpp"
    "./my_engine_math/matrix/matrix_2.hpp"
    "./my_engine_math/matrix/matrix_3.hpp"
    "./my_engine_math/matrix/matrix_4.hpp"
    "./my_engine_math/rotation/rotation.hpp"
    "./my_engine_math/rotation/quaternion.hpp"
    "./my_engine_math/rotation/axis_angle.hpp"
    "./my_engine_math/polar_coordinates/polar_coordinates.hpp"
    "./my_engine_math/constants.cpp"
    "./my_engine_math/vector/vector_2.cpp"
    "./my_engine_math/vector/vector_3.cpp"
    "./my_engine_math/vector/vector_4.cpp"
    "./my_engine_math/matrix/matrix_2.cpp"
    "./my_engine_math/matrix/matrix_3.cpp"
    "./my_engine_math/matrix/matrix_4.cpp"
    "./my_engine_math/rotation/quaternion.cpp"
    "./my_engine_math/rotation/axis_angle.cpp"
    "./my_engine_math/polar_coordinates/polar_coordinates.cpp")